modified:   index.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -10,18 +10,21 @@
 </head>
 
 <body onload="render()">
-    <div id="functions">
-        <h1>Etch a sketch</h1>
-        <input type="color" id="colorInput" value="#7A1CAC">
+    <div class="parent">
+        <div id="functions">
+            <h1>Etch a sketch</h1>
+            <input type="color" id="colorInput" value="#7A1CAC">
 
-        <input oninput="render()" type="range" min="2" max="64" value="8" step="2" class="slider" id="myRange">
+            <input oninput="render()" type="range" min="2" max="64" value="8" step="2" class="slider" id="myRange">
 
-        <span class="sliderValue">8 x 8</span>
+            <span class="sliderValue">8 x 8</span>
 
-        <button id="reset" onclick="resetGrid()">Reset container</button>
+            <button id="reset" onclick="resetGrid()">Reset container</button>
+        </div>
+        <div class="container" draggable="false">
+        </div>
     </div>
-    <div class="container">
-    </div>
+
     <script src="script.js"></script>
 </body>
 
