--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="parent">
         <div id="functions">
             <h1>Etch a sketch</h1>
-            <input type="color" id="colorInput" value="#7A1CAC">
+            <input type="color" id="colorInput" value="#EBD3F8">
 
             <input oninput="render()" type="range" min="2" max="64" value="8" step="2" class="slider" id="myRange">
 
@@ -21,7 +21,10 @@
 
             <button id="reset" onclick="resetGrid()">Reset container</button>
         </div>
-        <div class="container" draggable="false">
+        <div class="stroke">
+            <div class="container" draggable="false">
+
+            </div>
         </div>
     </div>
 
